Left-align pillar titles to prevent centering cascade from intro-section

--- a/css/style.css
+++ b/css/style.css
@@ -659,6 +659,7 @@ a.logo-product:hover {
   font-weight: 600;
   color: var(--text);
   margin-bottom: 3px;
+  text-align: left;
 }
 
 .p-desc {
